# sugoi-chat

./: README.md
backend/: pyproject.toml
backend/src/api/: router.py
backend/src/api/endpoints/: auth.py  users.py
backend/src/api/schemas/: users.py
backend/src/auth/: models.py  services.py
backend/src/sugoi_chat/: main.py
backend/sugoi/: .env.example  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml
backend/tests/: test_sugoi_chat.py
backend/tests/auth/: test_users.py
